--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   list_all_videos: ^1.2.0
   path_provider: ^2.1.3
   permission_handler: ^11.3.1
+  provider: ^6.1.2
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
